# grasp_ws

./: .gitignore  README.md  git.sh  init.sh  launch_hokuyo.sh  source.pcd
block/: block_m2.pcd  block_m_normal.pcd  m_02.pcd
block/edit_block/: block.blend  del1.pcd  del2_transformed.pcd  m.STL
block_300_200/: block_body.SLDPRT  block_body.STL  block_thin.SLDPRT  block_thin.STL
imgs/: hsv.csv  hsv0.csv  pc0.pcd  pc1.pcd  pc10.pcd  pc11.pcd  pc2.pcd  pc3.pcd  pc4.pcd  pc5.pcd  pc6.pcd  pc7.pcd  pc8.pcd  pc9.pcd
materials/: monkey.ply  slipper.pcd
materials/Armadillo_scans/: ArmadilloCarveSet.conf  ArmadilloOnFace2.conf  ArmadilloOnHeadLeft.conf  ArmadilloOnHeadMultiple.conf  ArmadilloOnHeadMultipleOffset.conf  ArmadilloOnHeadRight.conf  ArmadilloSide.conf  ArmadilloSide2.conf  ArmadilloStand.conf  ArmadilloStandFlip.conf
materials/test/.svn/: wc.db
reso/box_big/: m.pcd  m.ply  m_02_normal.pcd  mm.STL
reso/box_big/edit_block/: block.blend1  del2.pcd
reso/box_small/: thin.pcd  thin_0.005.pcd
reso/laser_detection/: env.pcd  env_with_counter.pcd  kalman_filter.eps  kalman_filter_dynamic.eps  source2.pcd
small_imgs/color_single_box/: hsv.csv
src/calibration/src/handeye_calib_sphere/: CMakeLists.txt  camera_intrinsic_color_kinect.xml
src/calibration/src/handeye_calib_sphere/dataset/: handeye_init.xml  handeye_result.xml  pointcloud_000.pcd  pointcloud_001.pcd  pointcloud_002.pcd  pointcloud_003.pcd  pointcloud_004.pcd  pointcloud_005.pcd  pointcloud_006.pcd  pointcloud_007.pcd  pointcloud_008.pcd  pointcloud_009.pcd  pointcloud_010.pcd  pointcloud_011.pcd  pointcloud_012.pcd  pointcloud_013.pcd  pointcloud_014.pcd  pointcloud_015.pcd  pointcloud_016.pcd  pointcloud_017.pcd  pointcloud_018.pcd  pointcloud_019.pcd  pointcloud_020.pcd  pointcloud_021.pcd  pointcloud_022.pcd  pointcloud_023.pcd  pointcloud_024.pcd  pointcloud_025.pcd  pointcloud_026.pcd  pointcloud_027.pcd  pointcloud_028.pcd  pointcloud_029.pcd  pointcloud_030.pcd  robot_pose.xml
src/calibration/src/handeye_calib_sphere/launch/: grab_data_sda.launch
src/calibration/src/handeye_calib_sphere/src/: eyeinhand_calib_node.cpp  grab_data_node.cpp
src/camera_driver/: CMakeLists.txt  package.xml
src/camera_driver/launch/: kinect_driver.launch  realsense_driver.launch
src/camera_driver/src/: kinect_driver.cpp  kinect_server.cpp  realsense2_server.cpp
src/grasp_planning/: CMakeLists.txt  package.xml
src/grasp_planning/model/: counter.STL  counter.stl
src/grasp_planning/src/: cbirrt_demo.cpp  grasp_attach.cpp  grasp_based_laser.cpp  grasp_box.cpp  grasp_full.cpp  grasp_motion.h  grasp_place.cpp  planning_in_cabin.cpp
src/img_process/: CMakeLists.txt  package.xml
src/img_process/scripts/: analyse_data.py  filter_pose.py  kalman_pose.py  pose.csv  pose1.csv  pose2.csv  read_topic.py  read_topic_filter.py
src/img_process/src/: average_hsv.cpp  hsv_seg.cpp  openni2_demo.cpp  view_hsv.cpp
src/laser-line-segment/: CMakeLists.txt  package.xml
src/laser-line-segment/include/laserline/: line_feature.h
src/laser-line-segment/src/: line_feature.cpp
src/laser_line_extraction-master/include/laser_line_extraction/: line_extraction.h
src/laser_line_extraction-master/launch/: example.launch
src/laser_line_extraction-master/src/: line_extraction.cpp
src/libicp/: CMakeLists.txt  package.xml
src/motoman/motoman_driver/: CMakeLists.txt
src/motoman/motoman_driver/include/motoman_driver/: joint_trajectory_streamer.h
src/motoman/motoman_driver/launch/: robot_interface_streaming.launch
src/motoman/motoman_driver/src/: joint_trajectory_streamer.cpp
src/motoman/motoman_driver/src/industrial_robot_client/: joint_trajectory_action.cpp
src/motoman/motoman_driver/src/simple_message/: motoman_motion_ctrl_message.cpp
src/motoman/motoman_msgs/: CMakeLists.txt
src/motoman/motoman_sda5f_pkg/: README.md
src/motoman/motoman_sda5f_pkg/motoman_sda5f_moveit_config/: .setup_assistant  package.xml
src/motoman/motoman_sda5f_pkg/motoman_sda5f_moveit_config/config/: controllers_sim.yaml  fake_controllers.yaml  kinematics.yaml  motoman_sda5f.srdf  motoman_sda5f_with_robotiq.srdf  ompl_planning.yaml  sensors_kinect.yaml  stomp_config.yaml
src/motoman/motoman_sda5f_pkg/motoman_sda5f_moveit_config/launch/: demo_fake.launch  demo_gazebo.launch  demo_real.launch  demo_stomp_fake.launch  motoman_sda5f_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  (+4 more)
src/motoman/motoman_sda5f_pkg/motoman_sda5f_support/: .rviz
src/motoman/motoman_sda5f_pkg/sda5f_gazebo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/obj_srv/: CMakeLists.txt  package.xml
src/obj_srv/srv/: obj_6d.srv
src/pcl_tutorial/: CMakeLists.txt  package.xml
src/pcl_tutorial/config/: supicp.yaml
src/pcl_tutorial/include/pcl_tutorial/: hsv_segmentation.h
src/pcl_tutorial/src/: alignment_prerejective.cpp  alignment_prerejective_block.cpp  border_extraction.cpp  correspondence_block.cpp  correspondence_grouping.cpp  cylinder_segmentation.cpp  depth_to_pcd.cpp  global_hypothesis.cpp  icp_block.cpp  implicit_shape_model.cpp  mesh_sample.cpp  ndt_block.cpp  pcd_size.cpp  pcl_temp.cpp  pcl_vis.cpp  ply_to_pcd.cpp  read_obj.cpp  region_growing_rgb_segmentation.cpp  save_depth.cpp  save_depth_with_mask.cpp  save_rgb.cpp  template_alignment.cpp
src/pcl_tutorial/src/filter/: extract_plane.cpp  passthrough.cpp
src/pcl_tutorial/src/laser/: CMakeLists.txt  counter_pose.cpp  filter_laser.cpp  filter_laser.launch  read_laser.cpp  recognize_counter.cpp  recognize_counter.launch
src/pcl_tutorial/src/linemod/: linemod_detect.cpp  linemod_train.cpp
src/pcl_tutorial/src/super_4pcs/: CMakeLists.txt  demo-utils.h  main.cpp  pcl_super4pcs.h  pcl_super4pcs_demo.cpp  super4pcs_demo.cpp  super4pcs_icp.h  supicp_demo.cpp
src/ppf/: CMakeLists.txt  package.xml
src/ppf/launch/: rgbd_image.launch
src/ppf/model/: bun.ply  littlebottle.ply  tube.ply
src/ppf/src/: get_image.cpp  hash_int.cpp  hash_int.hpp  hash_murmur.hpp  hash_murmur64.hpp  object6D.hpp  ppf.cpp  ppf.hpp  ppf_main (copy).cpp  ppf_main.cpp  utils.hpp
(+52 files in other folders)
